--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "cra-template": "1.1.0",
+        "firebase": "^9.10.0",
         "react": "^17.0.1",
+        "react-alert": "^7.0.3",
+        "react-alert-template-basic": "^1.0.2",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.0"
     },
