--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@mui/icons-material": "^5.10.6",
+        "@mui/material": "^5.10.7",
+        "@mui/styled-engine-sc": "^5.10.6",
         "cra-template": "1.1.0",
         "firebase": "^9.10.0",
         "react": "^17.0.1",
         "react-alert": "^7.0.3",
         "react-alert-template-basic": "^1.0.2",
         "react-dom": "^17.0.1",
-        "react-scripts": "4.0.0"
+        "react-scripts": "4.0.0",
+        "styled-components": "^5.3.6"
     },
     "scripts": {
         "start": "react-scripts start",
